welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: too many arguments for method isFacingTrail: ()Boolean
    	if (isFacingTrail(c)) { 
                         ^SlugSnail:6: error: too many arguments for method baisseBrosse: ()Unit
    		baisseBrosse(c)
                            ^SlugSnail:7: error: too many arguments for method leveBrosse: ()Unit
    		leveBrosse(c)
                          ^SlugSnail:18: error: not found: value c
		if (getCouleurSol() == c ) {
                                       ^