welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
    while (!estSurBiscuit) {
    	if (isFacingTrail(c)) { 
    		avance()
    		baisseBrosse(c)
    		leveBrosse(c)
    	}
    	else { droite() }
    }
    prendBiscuit()
}

def isFacingTrail():Boolean = {
	var a:Boolean = false
	if ( estFaceMur() == false ) { 
		avance() 
		if (getCouleurSol() == c ) {
			a = true
		}
		else { a = false }
		recule()
		if ( a == true ) { return true}
		else { return false}
	}
	else { return false }
}       



